force-app/main/default/objects/Building_Notes__c/Building_Notes__c.object-meta.xml
<CustomObject>
    <label>Building Notes</label>
    <nameField>
        <displayFormat>BN - {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>