force-app/main/default/objects/Building_Notes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>IF(Contact__c != null,(HYPERLINK((&apos;/&apos;+Contact__r.AccountId), Contact__r.Account.Name)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>