force-app/main/default/objects/Building_Notes__c/fields/Closed_Removes_Flag_from_ID_Winner_Sea__c.field-meta.xml
<CustomField>
    <fullName>Closed_Removes_Flag_from_ID_Winner_Sea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>