force-app/main/default/objects/Building_Notes__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Enter building note here</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>